--- a/PlatformLevelTechempower/PlatformLevelTechempower.csproj
+++ b/PlatformLevelTechempower/PlatformLevelTechempower.csproj
@@ -7,7 +7,7 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0" />
     <PackageReference Include="Jil" Version="2.15.4" />
     <PackageReference Include="Utf8Json" Version="1.0.2" />
   </ItemGroup>
